# plaii

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
app/: __init__.py  main.py
app/config/: colors.py  settings.py
app/core/: __init__.py  models.py
app/core/models/: __init__.py  album.py  app.py  folder.py  music.py  player_state.py
app/data/: __init__.py  cache_manager.py  datastore.py  repositories.py
app/data/repositories/: __init__.py  album_repository.py  app_repository.py  folder_repository.py  music_repository.py  player_repository.py
app/layout/: __init__.py  app_head.py  app_menu.py  app_player.py
app/models/: __init__.py  albums.py  folders.py  musics.py  player.py
app/services/: audio_service.py  metadata_service.py  notify_service.py
app/shared/: __init__.py  datastore.py  models.py  utils.py
app/ui/: __init__.py  app.py  window.py
app/ui/components/: music_list.py
app/ui/layout/: __init__.py  app_bar.py  appbar.py  bottom_bar.py  navigation.py  player_bar.py
app/ui/views/: __init__.py  album_view.py  albums_view.py  musics_view.py  settings_view.py
app/utils/: helpers.py  image_utils.py  time_format.py
app/views/: __init__.py  albums.py  musics.py  settings.py
src/: main.py
