[project]
name = "plaii"
version = "0.1.0"
description = "A music player"
authors = [{ name = "Valmisson Grizorte <valmisson.github.io>" }]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ['music', 'player']
requires-python = ">=3.11"
dependencies = []

[project.urls]
repository = "https://github.com/valmisson/plaii"

[dependency-groups]
dev = [
    "flet[all]>=0.27.4",
    "pytest>=8.3.4",
    "ruff>=0.9.7",
]

[tool.ruff]
target-version = 'py39'
line-length = 80
