[project]
name = "plaii"
version = "0.1.0"
description = "A music player"
authors = [{ name = "Valmisson Grizorte <valmisson.github.io>" }]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ['music', 'player']
requires-python = ">=3.11"

dependencies = [
    "tinytag>=2.1.0",
]

[project.urls]
repository = "https://github.com/valmisson/plaii"

[tool.poetry.group.dev.dependencies]
flet = {version = "^0.27.6", extras = ["all"]}
pytest = "^8.3.5"
ruff = "^0.11.2"
flet-audio = "^0.1.0"

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = 'py39'
line-length = 80
exclude = ["**/__init__.py"]
